test/success/unit/_succ_value_basic_5.hs
main = do
       let x :: String
           x = "hello"
       print x