test/fail/integration/_fail_grammar_let_stmts_6.hs
main = do
       let x = 
       print "hello"